# kaminsky-attack

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: dns.rs  kaminsky.rs  main.rs  spoofer.rs
src/dns/: additional.rs  answer.rs  authority.rs  classes.rs  client.rs  header.rs  hostname.rs  message.rs  query.rs  question.rs  resource_record.rs  response.rs  types.rs
