[package]
name = "kaminsky_attack"
version = "0.1.0"
authors = ["Kirby Linvill <kjlinvill@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
num-traits = "0.2.12"
num-derive = "0.3.2"
pnet = "0.30.0"
pnet_packet = "0.30.0"
structopt = "0.3.19"
